--- a/kafka/kafka-full-stack.yml
+++ b/kafka/kafka-full-stack.yml
@@ -28,7 +28,7 @@ services:
       - ./zk-multiple-kafka-multiple/zoo2/datalog:/datalog
 
   zoo3:
-    image: zookeeper:3.4.9 
+    image: zookeeper:3.4.9
     hostname: zoo3
     ports:
       - "2183:2183"
@@ -39,7 +39,6 @@ services:
     volumes:
       - ./zk-multiple-kafka-multiple/zoo3/data:/data
       - ./zk-multiple-kafka-multiple/zoo3/datalog:/datalog
-
 
   kafka1:
     image: confluentinc/cp-kafka:5.5.1
@@ -109,7 +108,11 @@ services:
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
     depends_on:
       - zoo1
+      - zoo2
+      - zoo3
       - kafka1
+      - kafka2
+      - kafka3
 
   schema-registry-ui:
     image: landoop/schema-registry-ui:0.9.5
@@ -135,7 +138,11 @@ services:
       KAFKA_REST_BOOTSTRAP_SERVERS: PLAINTEXT://kafka1:19092
     depends_on:
       - zoo1
+      - zoo2
+      - zoo3
       - kafka1
+      - kafka2
+      - kafka3
       - kafka-schema-registry
 
   kafka-topics-ui:
@@ -148,7 +155,11 @@ services:
       PROXY: "true"
     depends_on:
       - zoo1
+      - zoo2
+      - zoo3
       - kafka1
+      - kafka2
+      - kafka3
       - kafka-schema-registry
       - kafka-rest-proxy
 
@@ -181,7 +192,11 @@ services:
       - ./connectors:/etc/kafka-connect/jars/
     depends_on:
       - zoo1
+      - zoo2
+      - zoo3
       - kafka1
+      - kafka2
+      - kafka3
       - kafka-schema-registry
       - kafka-rest-proxy
 
@@ -207,7 +222,11 @@ services:
       KSQL_KSQL_SERVICE_ID: ksqldb-server_
     depends_on:
       - zoo1
+      - zoo2
+      - zoo3
       - kafka1
+      - kafka2
+      - kafka3
 
   zoonavigator:
     image: elkozmon/zoonavigator:0.8.0
@@ -215,4 +234,4 @@ services:
       - "8004:8000"
     environment:
       HTTP_PORT: 8000
-      AUTO_CONNECT_CONNECTION_STRING: zoo1:2181
+      AUTO_CONNECT_CONNECTION_STRING: zoo1:2181,zoo2:2181,zoo3:2181
