implemented grpc server and client.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-./.idea
+.idea
 
 # ignore kafka volumes
-./kafka/connectors
-./kafka/zk-multiple-kafka-multiple
-
+kafka/connectors
+kafka/zk-multiple-kafka-multiple
